# weather-app

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: locations.py  pipeline.py  weather.py
backend/app/db/: engine.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py  002_add_locations.py
backend/app/db/models/: __init__.py  locations.py  pipeline.py  raw.py  transformed.py
backend/app/ingestion/: backfill_client.py  client.py  loader.py  scheduler.py
backend/app/locations/: catalog.py
backend/app/pipeline/: runner.py  transform.py  validate.py
backend/app/schemas/: locations.py  pipeline.py  weather.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CurrentWeather.tsx  LocationManager.tsx  LocationPicker.tsx  PipelineStatus.tsx  UnitToggle.tsx  WeatherChart.tsx
frontend/src/hooks/: useUnits.ts  useWeather.ts
frontend/src/types/: weather.ts
frontend/src/utils/: units.ts
